Fixed featured product viewer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 	font-size: 5rem;
 	font-weight: 100;
 	color: white;
-	text-shadow: 0px 0px 10px white;
 }
 
 .btn{
@@ -18,7 +17,6 @@ body {
 }
 .btn.btn-secondary{
 	color: white;
-	text-shadow: 0px 0px 10px var(--theme);
 }
 .btn.btn-primary {
 	background-color: var(--theme) !important;
@@ -32,7 +30,6 @@ body {
 	font-size: 2rem;
 	font-weight: 100;
 	color: white;
-	text-shadow: 0px 0px 10px white;
 	width: fit-content;
 }
 .card{
@@ -55,7 +52,6 @@ body {
 	font-family: "Roboto Mono", monospace !important;
 	color: white !important;
 	content: "X" !important;
-	text-shadow: 0px 0px 10px white;
 }
 .modal-header{
 	background-color: transparent !important;
@@ -74,13 +70,32 @@ body {
 	background-color: transparent !important;
 }
 
-#container3D canvas {
-    margin: auto;
+.glow{
+	text-shadow: 0px 0px 20px white !important;
+}
+
+#container3D > canvas {
+    /* margin: auto; */
 	width: 100% !important;
-	height: 100% !important;
+	object-fit: cover !important;
 }
 
 #hero{
-	padding-top: 20vh;
-	height: 70vh;
+	padding-top: 10vh;
+	height: fit-content !important;
+}
+
+@media screen and (max-width: 768px) {
+	#hero{
+		padding-top: 1vh !important;
+		height: fit-content !important;
+		padding-bottom: 4vh !important;
+	}
+	#container3D canvas {
+		margin: auto;
+		height: 50vh !important;
+	}
+	.title{
+		font-size: 3rem;
+	}
 }
